--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,14 +19,13 @@ jobs:
         with:
           python-version: '3.11' # Version range or exact version of a Python version to use, using SemVer's version range syntax
           architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
-          cache: 'pip'
-          cache-dependency-path: |
-            **/requirements*.txt
-
-      - name: Install Dependencies
-        run: |
-          pip install -r requirements.txt -r requirements-dev.txt
-
+          
+      - name: Setup PDM
+        uses: pdm-project/setup-pdm@v4
+        
+      - name: Install dependencies
+        run: pdm install
+        
       - name: Build Executable
         uses: Nuitka/Nuitka-Action@main
         with:
@@ -40,5 +39,5 @@ jobs:
           name: ${{ runner.os }} Build
           path: |
             build/*.exe
-            build/*.bin
+            build/*
             build/*.app/**/*
