--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,9 @@ jobs:
         uses: Nuitka/Nuitka-Action@main
         with:
           nuitka-version: main
+          script-name: main.py
+          include-plugin-directory: codeintp
+          standalone: true
           onefile: true
 
       - name: Upload Artifacts
