--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: 2kbit-intp
+          name: 2kbit-intp-${{ runner.os }}
           path: |
             build/*.exe
             build/*
