--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,28 +26,29 @@ jobs:
       - name: Install dependencies
         run: pdm install
         
-      - name: Build Executable
+      - name: Build executable
         uses: Nuitka/Nuitka-Action@main
         with:
           nuitka-version: main
           script-name: main.py
+          include-plugin-directory: |
+            ./codeintp
+            .
+          standalone: true
           onefile: true
 
       - id: string
-        name: Lowercase String
+        name: Lowercase string
         uses: ASzc/change-string-case-action@v6
         with:
           string: ${{ runner.os }}
 
       - id: commit
-        name: Get Commit Hash
+        name: Get commit hash
         uses: prompt/actions-commit-hash@v3
-        with:
-          push: true
-          tags: ${{ steps.commit.outputs.short }}
 
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v3
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
         with:
           name: 2kbit-intp-${{ steps.commit.outputs.short }}-${{ steps.string.outputs.lowercase }}
           path: |
