--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,9 @@ jobs:
         with:
           nuitka-version: main
           script-name: main.py
-          include-plugin-directory: ./codeintp
+          include-module: nonebot-drivers-fastapi
+          include-plugin-directory: codeintp
+          standalone: true
           onefile: true
 
       - id: string
